Bottom spacing fix tags

--- a/blocks/aside/aside.css
+++ b/blocks/aside/aside.css
@@ -77,3 +77,7 @@
   border-bottom: 2px solid #004dff;
   line-height: 35px;
 }
+
+.section.aside-container {
+  padding-bottom: 0;
+}
